UI fixes for sidebar alignment.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1584,7 +1584,7 @@ button::-moz-focus-inner {
   position: fixed;
   width: 100%;
   height: 50px;
-  line-height: 50px;
+  line-height: 42px;
   z-index: 2;
   -webkit-transition: top 0.3s 0s;
   -moz-transition: top 0.3s 0s;
@@ -1705,6 +1705,9 @@ button::-moz-focus-inner {
   -webkit-transition-delay: 0.3s;
   -moz-transition-delay: 0.3s;
   transition-delay: 0.3s;
+  direction: rtl;
+  margin-top: 66px;
+  padding-top: 0;
 }
 .from-right .cd-panel-container {
   right: 0;
@@ -1756,7 +1759,7 @@ button::-moz-focus-inner {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 50px 0px; /* 5% */
+  /*padding: 50px 0px; !* 5% *!*/
   overflow: auto;
   padding-bottom: 0px;
   /* smooth scrolling on touch devices */
